Better layout using Bulma tiles for page 4

--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ body {
 /* dropdowns */
   .control {
     max-width: 100%;
-    padding: 20px;
-    margin-left: 60px;
+    padding: 10px;
+    margin-left: 20px;
     right: 50px;
     left: 50px;
   }
@@ -64,14 +64,14 @@ body {
   #options1 {
     width: 200px;
     max-width: 100%;
-    left: 50px;
+    left: 180px;
     right: 50px;
   }
 
   #options2 {
     width: 200px;
     max-width: 100%;
-    right: 50px;
+    right: 120px;
   }
 
 /* checkboxes */
@@ -86,7 +86,8 @@ body {
   /* liquor bottle, mixer bottle */
   .img1, .img2 {
     margin-left: 100px;
-    margin-bottom: 20;
+    margin-bottom: 20px;
+    bottom: 20px;
   }
 
 /* styling that makes the images act as buttons w/o the normal appearance of a button*/
@@ -95,7 +96,6 @@ body {
     border: none;
     outline: none;
   }
-
  
   /* -----------------------------3rd page styling--------------------------------------- */
   #solid {
@@ -116,30 +116,66 @@ body {
     padding: 10px;
   }
 /* ------------------------------4th page------------------------------ */
-.container {
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0 0 5px 2px;
-  width: 600px;
-  max-width: 100%;
-  margin-top: 50px;
-  margin-bottom: 100px;
+
+
+#recipe {
+  margin-right: 20px;
 }
 
+.tile{
+  margin-left: 10px;
+}
 
-figure {
-    margin-top: 180px;
-    border-radius: 2px;
-    bottom: 100px;
+h3{
+  font-weight: bolder;
+  font-size: 32px;
+  text-align: center;
+}
 
+/* drink picture */
+
+.drink-img {
+    display: block;
+    max-width: 100%;
+    border-radius: 5px;
+    margin-right: auto;
+    margin-left: auto;
+    
   }
 
+/* drink title */
+  h4 {
+    font-weight: bolder;
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  
   footer {
+    background-color: tomato;
+    border: 2px double;
+    border-radius: 10px;
+    color: #eeeeee;
+    text-align: center;
     height: 80px;
     width: 600px;
     margin: 0 auto;
-    margin-top: 10px;
+    margin-bottom: 10px;
   }
+  
+/* joke title */
+  h5{
+    font-weight: bolder;
+    font-size: 22px;
+  }
+  
+p {
+  font-size: 18px;
+  padding-left: 15px;
+
+}
+
+ 
 
   /* for popover js */
   #tooltip {
