--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     -webkit-animation: glow 1s ease-in-out infinite alternate;
     -moz-animation: glow 1s ease-in-out infinite alternate;
     animation: glow 1s ease-in-out infinite alternate;
+  
   }
 
   @-webkit-keyframes glow {
@@ -33,26 +34,29 @@ body {
 
 /* container */
   .notification {
-    font-size: 24px;
+   background-color: whitesmoke;
+   font-size: 24px;
     width: 500px;
+    height: 200px;
     max-width: 100%;
-    margin: 0 auto;
-    bottom: 120px;
     box-shadow: 0 0 5px 2px;
+    padding: 20px;
+    margin: 0 auto;
   }
 /* dropdowns */
   .control {
     max-width: 100%;
     padding: 10px;
-    margin-left: 20px;
-    right: 50px;
-    left: 50px;
+    margin-right: 50px;
+    margin-left: 90px;
   }
-
-/* text in container */
+  
   .one {
     text-align: center;
+    font-size: 20px;
+    font-weight: bold;
   }
+
 /* --------------- 2nd page styling-------------*/
 
 /* background for pages 2, 4 */
