--- a/style.css
+++ b/style.css
@@ -3,133 +3,170 @@ body {
     margin: 0;
     justify-content: center;
     align-items: center;
-  }
+}
 
 
- /* Makes titles appear neon */
-  .glow {
+/* Makes titles appear neon */
+
+.glow {
     font-size: 80px;
     color: #eee;
     text-align: center;
     -webkit-animation: glow 1s ease-in-out infinite alternate;
     -moz-animation: glow 1s ease-in-out infinite alternate;
     animation: glow 1s ease-in-out infinite alternate;
-  
-  }
+}
 
-  @-webkit-keyframes glow {
+@-webkit-keyframes glow {
     from {
-      text-shadow: 0 0 10px #eee, 0 0 20px #fff, 0 0 30px red, 0 0 40p red, 0 0 50px red, 0 0 60p red, 0 0 70p red;
+        text-shadow: 0 0 10px #eee, 0 0 20px #fff, 0 0 30px red, 0 0 40p red, 0 0 50px red, 0 0 60p red, 0 0 70p red;
     }
     to {
-      text-shadow: 0 0 20px #eee, 0 0 30px tomato, 0 0 40px tomato, 0 0 50px tomato, 0 0 60px tomato, 0 0 70px tomato, 0 0 80px tomato;
+        text-shadow: 0 0 20px #eee, 0 0 30px tomato, 0 0 40px tomato, 0 0 50px tomato, 0 0 60px tomato, 0 0 70px tomato, 0 0 80px tomato;
     }
-  }
+}
+
+
 /* --------------- 1st page styling----------- */
-  /* background for page 1*/
-  #cocktails {
+
+
+/* background for page 1*/
+
+#cocktails {
     background: url("assests/1976957.jpg") center / cover;
-  }
+}
+
 
 /* container */
-  .notification {
-   background-color: tomato;
-   opacity: 98%;
-   font-size: 24px;
-   top: 200px;
-    
+
+.notification {
+    background-color: tomato;
+    opacity: 98%;
+    font-size: 24px;
+    top: 200px;
     max-width: 100%;
     box-shadow: 0 0 5px 2px;
     padding: 20px;
     margin: 0 auto;
-  }
-  .one {
+}
+
+.one {
     text-align: center;
     font-size: 20px;
     font-weight: bold;
-  }
+}
+
 
 /* dropdowns */
-  .control {
+
+.control {
     display: inline;
     max-width: 50%;
     margin-left: 20px;
     margin-bottom: 10px;
-  }
-  
-  .button{
+}
+
+.button {
     font-size: 18px;
     font-weight: bolder;
-  }
+}
+
 
 /* --------------- 2nd page styling-------------*/
 
+
 /* background for pages 2, 4 */
+
 #image2 {
-  background: url("assests/8.jpg") center / cover;
+    background: url("assests/8.jpg") center / cover;
 }
+
+
 /* checkbox containers */
 
-  #options1 {
-    border-radius: 5px;
+#options1 {
     font-size: 24px;
     background-color: whitesmoke;
-    font-size: 24px;
-     max-width: 100%;
-     margin: 0 auto;
-     bottom: 200px;
-     box-shadow: 0 0 5px 2px;
-     padding: 20px;s: 5px;
+    max-width: 100%;
+    margin: 0 auto;
+    bottom: 200px;
+    box-shadow: 0 0 5px 2px;
+    padding: 20px;
+    border-radius: 5px;
     width: 200px;
     max-width: 100%;
-    left: 180px;
-    right: 50px;
-  }
+    left: 200px;
+}
 
-  #options2 {
+#options2 {
     font-size: 24px;
-  background-color: whitesmoke;
-  font-size: 24px;
-   max-width: 100%;
-   margin: 0 auto;
-   bottom: 200px;
-   box-shadow: 0 0 5px 2px;
-   padding: 20px;
+    background-color: whitesmoke;
+    max-width: 100%;
+    margin: 0 auto;
+    bottom: 200px;
+    box-shadow: 0 0 5px 2px;
+    padding: 20px;
     border-radius: 5px;
     width: 200px;
     max-width: 100%;
     right: 200px;
-  }
-
-/* checkboxes */
-#liquor-list, #mixer-list {
-  font-weight: bold;
-  margin-left: 20px;
-  padding: 5px;
-  left: 0px;
-  right: 0px;
 }
 
-  /* liquor bottle, mixer bottle */
-  .img1, .img2 {
+
+/* checkboxes */
+
+#liquor-list {
+    font-weight: bold;
+    /* margin-left: 20px; */
+    /* padding: 5px; */
+    /* left: 0px; */
+    /* right: 0px; */
+    -webkit-appearance: checkbox;
+}
+
+#mixer-list {
+    font-weight: bold;
+    margin-left: 20px;
+    padding: 5px;
+    left: 0px;
+    right: 0px;
+}
+
+
+/* liquor bottle, mixer bottle */
+
+.img1,
+.img2 {
     margin-left: 100px;
     margin-bottom: 20px;
     bottom: 20px;
-  }
+}
+
 
 /* styling that makes the images act as buttons w/o the normal appearance of a button*/
-  button {
+
+button {
     background: none;
     border: none;
     outline: none;
-  }
-  /* -----------------------------3rd page styling--------------------------------------- */
-  #solid {
+}
+
+#user-submit {
+    left: 46%;
+    box-shadow: 0 0 5px 2px;
+}
+
+
+/* -----------------------------3rd page styling--------------------------------------- */
+
+#solid {
     background-color: black;
-  }
+}
+
 
 /* container  */
-  #menu {
+
+#menu {
     background-color: white;
     text-align: center;
     font-size: 20px;
@@ -140,23 +177,25 @@ body {
     margin-top: 150px;
     margin-bottom: 200px;
     padding: 10px;
-  }
+}
+
+
 /* ------------------------------4th page------------------------------ */
 
-
 #recipe {
-  margin-right: 20px;
+    margin-right: 20px;
 }
 
-.tile{
-  margin-left: 10px;
+.tile {
+    margin-left: 10px;
 }
 
-h3{
-  font-weight: bolder;
-  font-size: 32px;
-  text-align: center;
+h3 {
+    font-weight: bolder;
+    font-size: 32px;
+    text-align: center;
 }
+
 
 /* drink picture */
 
@@ -166,18 +205,18 @@ h3{
     border-radius: 5px;
     margin-right: auto;
     margin-left: auto;
-    
-  }
+}
+
 
 /* drink title */
-  h4 {
+
+h4 {
     font-weight: bolder;
     font-size: 20px;
     padding: 10px;
-  }
+}
 
-  
-  footer {
+footer {
     background-color: tomato;
     border: 2px double;
     border-radius: 10px;
@@ -187,29 +226,30 @@ h3{
     width: 600px;
     margin: 0 auto;
     margin-bottom: 10px;
-  }
-  
-/* joke title */
-  .h5 {
-    font-weight: bolder;
-    font-size: 22px;
-  }
-  
-p {
-  font-size: 18px;
-  padding-left: 15px;
-  margin-top: 10px;
-  line-height: 2;
-
 }
 
- 
 
-  /* for popover js */
-  #tooltip {
-  background-color: #333;
-  color: white;
-  padding: 5px 10px;
-  border-radius: 4px;
-  font-size: 13px;
+/* joke title */
+
+.h5 {
+    font-weight: bolder;
+    font-size: 22px;
+}
+
+p {
+    font-size: 18px;
+    padding-left: 15px;
+    margin-top: 10px;
+    line-height: 2;
+}
+
+
+/* for popover js */
+
+#tooltip {
+    background-color: #333;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 4px;
+    font-size: 13px;
 }
