--- a/style.css
+++ b/style.css
@@ -94,8 +94,9 @@ body {
     padding: 20px;
     border-radius: 5px;
     width: 200px;
-    max-width: 100%;
+    max-height: 200px;
     left: 200px;
+    overflow: scroll;
 }
 
 #options2 {
@@ -108,8 +109,9 @@ body {
     padding: 20px;
     border-radius: 5px;
     width: 200px;
-    max-width: 100%;
+    max-height: 200px;
     right: 200px;
+    overflow: scroll;
 }
 
 
