--- a/style.css
+++ b/style.css
@@ -5,18 +5,11 @@ body {
     align-items: center;
 }
 
-figure {
-  text-align: center;
-}
-#goBack {
-  margin-top: 40px;
-}
 
 /* Makes titles appear neon */
-
 .glow {
     font-size: 100px;
-    color:beige ;
+    color: beige;
     text-align: center;
     -webkit-animation: glow 1s ease-in-out infinite alternate;
     -moz-animation: glow 1s ease-in-out infinite alternate;
@@ -27,29 +20,31 @@ figure {
     from {
         text-shadow: 0 0 10px #eee, 0 0 20px #fff, 0 0 30px red, 0 0 40p red, 0 0 50px red, 0 0 60p red, 0 0 70p red;
     }
+
     to {
         text-shadow: 0 0 20px #eee, 0 0 30px tomato, 0 0 40px tomato, 0 0 50px tomato, 0 0 60px tomato, 0 0 70px tomato, 0 0 80px tomato;
     }
 }
 
 
-/* --------------- 1st page styling----------- */
+/* ---------------------------- 1st page styling--------------------------------- */
 
 
 /* background for page 1*/
-
 #cocktails {
     background: url("assests/1976957.jpg") center / cover;
 
 }
 
-#theMakeables li:hover {
-  text-decoration-line: underline;
+.modal-content {
+    background: black;
+    color: #eeeeee;
+    font-weight: bolder;
+    font: 30px;
+    top: 50%;
 }
 
-
 /* container */
-
 .notification {
     background-color: black;
     opacity: 98%;
@@ -69,7 +64,6 @@ figure {
 
 
 /* dropdowns */
-
 .control {
     display: inline;
     max-width: 50%;
@@ -83,18 +77,16 @@ figure {
 }
 
 
-/* --------------- 2nd page styling-------------*/
+/* --------------------------------------------- 2nd page styling----------------------------------*/
 
 
 /* background for pages 2, 4 */
-
 #image2 {
     background: url("assests/8.jpg") center / cover;
 }
 
 
 /* checkbox containers */
-
 #options1 {
     font-size: 24px;
     background-color: whitesmoke;
@@ -127,7 +119,6 @@ figure {
 
 
 /* checkboxes */
-
 #liquor-list {
     font-weight: bold;
     /* margin-left: 20px; */
@@ -147,7 +138,6 @@ figure {
 
 
 /* liquor bottle, mixer bottle */
-
 .img1,
 .img2 {
     margin-left: 100px;
@@ -156,8 +146,7 @@ figure {
 }
 
 
-/* styling that makes the images act as buttons w/o the normal appearance of a button*/
-
+/* styling that makes the images act as buttons w/o the normal appearance of a button*/ 
 button {
     background: none;
     border: none;
@@ -170,15 +159,13 @@ button {
 }
 
 
-/* -----------------------------3rd page styling--------------------------------------- */
+/* ------------------------------------------------------3rd page styling--------------------------------------- */
 
 #solid {
     background-color: black;
 }
 
-
 /* container  */
-
 #menu {
     background-color: white;
     text-align: center;
@@ -192,8 +179,11 @@ button {
     padding: 10px;
 }
 
+#theMakeables li:hover {
+    text-decoration-line: underline;
+}
 
-/* ------------------------------4th page------------------------------ */
+/* -----------------------------------------------------------4th page--------------------------------------------- */
 
 #recipe {
     margin-right: 20px;
@@ -211,7 +201,6 @@ h3 {
 
 
 /* drink picture */
-
 .drink-img {
     display: block;
     max-width: 100%;
@@ -222,7 +211,6 @@ h3 {
 
 
 /* drink title */
-
 h4 {
     font-weight: bolder;
     font-size: 20px;
@@ -243,11 +231,11 @@ footer {
 
 
 /* joke title */
-
 .h5 {
     font-weight: bolder;
     font-size: 22px;
 }
+
 
 p {
     font-size: 18px;
@@ -258,7 +246,6 @@ p {
 
 
 /* for popover js */
-
 #tooltip {
     background-color: #333;
     color: white;
@@ -268,10 +255,13 @@ p {
 }
 
 #enterButton {
-
-    margin-top:5px;
+    margin-top: 5px;
 }
 
 #mainTitle {
- font-size: 200px !important;
+    font-size: 200px !important;
+}
+
+#goBack {
+    margin-top: 40px;
 }
