--- a/style.css
+++ b/style.css
@@ -1,50 +1,50 @@
 body {
-    padding: 0;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
 }
 
 
 /* Makes titles appear neon */
 .glow {
-    font-size: 100px;
-    color: beige;
-    text-align: center;
-    -webkit-animation: glow 1s ease-in-out infinite alternate;
-    -moz-animation: glow 1s ease-in-out infinite alternate;
-    animation: glow 1s ease-in-out infinite alternate;
+  font-size: 100px;
+  color: beige;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
 }
 
 @-webkit-keyframes glow {
-    from {
-        text-shadow: 0 0 10px #eee, 0 0 20px #fff, 0 0 30px red, 0 0 40p red, 0 0 50px red, 0 0 60p red, 0 0 70p red;
-    }
+  from {
+      text-shadow: 0 0 10px #eee, 0 0 20px #fff, 0 0 30px red, 0 0 40p red, 0 0 50px red, 0 0 60p red, 0 0 70p red;
+  }
 
-    to {
-        text-shadow: 0 0 20px #eee, 0 0 30px tomato, 0 0 40px tomato, 0 0 50px tomato, 0 0 60px tomato, 0 0 70px tomato, 0 0 80px tomato;
-    }
+  to {
+      text-shadow: 0 0 20px #eee, 0 0 30px tomato, 0 0 40px tomato, 0 0 50px tomato, 0 0 60px tomato, 0 0 70px tomato, 0 0 80px tomato;
+  }
 }
 
 @media screen and (max-width: 600px) {
-  #mainTitle {
-    font-size: 75px !important;
-  };
+#mainTitle {
+  font-size: 75px !important;
+};
 
-  iframe {
-    width: 272px;
-    height: 204px;
+#idk {
+  width: 302px;
+  height: 227px;
 
-  }
+}
 
-  #options1, #options2 {
-    height: 200px;
-  }
+#options1, #options2 {
+  height: 200px;
+}
 }
 
 iframe {
-  width: 336px;
-  height: 252px;
+width: 336px;
+height: 252px;
 }
 
 
@@ -54,68 +54,68 @@ iframe {
 
 /* background for page 1*/
 #cocktails {
-    background: url("assests/1976957.jpg") center / cover;
+  background: url("assests/1976957.jpg") center / cover;
 
 }
 
 #enterButton {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 #mainTitle {
-    font-size: 150px;
+  font-size: 150px;
 }
 
 #goBack {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 
 
 .modal-content {
-    background: tomato;
-    color: #eeeeee;
-    font-size: 30px;
-    font-weight: bolder;
-    text-align: center;
-    font: 30px;
-    top: 50%;
-    max-width: 40%;
+  background: tomato;
+  color: #eeeeee;
+  font-size: 30px;
+  font-weight: bolder;
+  text-align: center;
+  font: 30px;
+  top: 50%;
+  max-width: 40%;
 }
 
 .modal-close {
-    max-width: 20%;
+  max-width: 20%;
 }
 
 /* container */
 .notification {
-    background-color: black;
-    opacity: 98%;
-    font-size: 24px;
-    top: 200px;
-    max-width: 100%;
-    box-shadow: 0 0 5px 2px;
-    padding: 20px;
-    margin: 0 auto;
+  background-color: black;
+  opacity: 98%;
+  font-size: 24px;
+  top: 200px;
+  max-width: 100%;
+  box-shadow: 0 0 5px 2px;
+  padding: 20px;
+  margin: 0 auto;
 }
 
 .one {
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 
 /* dropdowns */
 .control {
-    display: inline;
-    max-width: 50%;
-    margin-left: 20px;
-    margin-bottom: 10px;
+  display: inline;
+  max-width: 50%;
+  margin-left: 20px;
+  margin-bottom: 10px;
 }
 
 .button {
-    font-size: 18px;
-    font-weight: bolder;
+  font-size: 18px;
+  font-weight: bolder;
 }
 
 
@@ -124,152 +124,145 @@ iframe {
 
 /* background for pages 2, 4 */
 #image2 {
-    background: url("assests/8.jpg") center / cover;
+  background: url("assests/8.jpg") center / cover;
 }
 
 
 /* checkbox containers */
 #options1,
 #options2 {
-    font-size: 24px;
-    background-color: whitesmoke;
-    width: 200px;
-    max-width: 100%;
-    max-height: 300px;
-    box-shadow: 0 0 5px 2px;
-    border-radius: 5px;
-    overflow: scroll;
+  font-size: 24px;
+  background-color: whitesmoke;
+  width: 200px;
+  max-width: 100%;
+  max-height: 300px;
+  box-shadow: 0 0 5px 2px;
+  border-radius: 5px;
+  overflow: scroll;
 }
 
 
 /* checkboxes */
 #liquor-list {
-    font-weight: bold;
-    -webkit-appearance: checkbox;
+  font-weight: bold;
+  -webkit-appearance: checkbox;
 }
 
 #mixer-list {
-    font-weight: bold;
-    margin-left: 20px;
-    padding: 10px;
-    left: 0px;
-    right: 0px;
+  font-weight: bold;
+  margin-left: 20px;
+  padding: 10px;
+  left: 0px;
+  right: 0px;
 }
 
 
 /* liquor bottle, mixer bottle */
 .img1,
 .img2 {
-    margin-left: 50px !important;
-    margin-top: 150px !important;
-    bottom: 20px !important;
+  margin-left: 50px !important;
+  margin-top: 150px !important;
+  bottom: 20px !important;
 }
 
-.popover-body {
-    font-size: 26px;
-    font-weight: bolder;
-    color: whitesmoke;
-    background-color: brown;
-}
 
 /* styling that makes the images act as buttons w/o the normal appearance of a button*/
 button {
-    background: none;
-    border: none;
-    outline: none;
+  background: none;
+  border: none;
+  outline: none;
 }
 
 #user-submit {
-    left: 46%;
-    box-shadow: 0 0 5px 2px;
+  left: 46%;
+  box-shadow: 0 0 5px 2px;
 }
 
 
 /* ------------------------------------------------------3rd page styling--------------------------------------- */
 
 #solid {
-    background-color: black;
+  background-color: black;
 }
 
 /* container  */
 #menu {
-    background-color: white;
-    text-align: center;
-    font-size: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px 2px;
-    width: 600px;
-    max-width: 100%;
-    margin-top: 150px;
-    margin-bottom: 200px;
-    padding: 10px;
+  background-color: white;
+  text-align: center;
+  font-size: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 2px;
+  width: 600px;
+  max-width: 100%;
+  margin-top: 150px;
+  margin-bottom: 200px;
+  padding: 10px;
 }
 
 #theMakeables li:hover {
-    text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 /* -----------------------------------------------------------4th page--------------------------------------------- */
 
 #recipe {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .tile {
-    margin-right: 40px;
-    margin-left: 10px;
-    margin-bottom: 40px;
+  margin-right: 40px;
+  margin-left: 10px;
+  margin-bottom: 40px;
 }
 
 h3 {
-    font-weight: bolder;
-    font-size: 40px;
-    text-align: center;
+  font-weight: bolder;
+  font-size: 40px;
+  text-align: center;
 }
 
 
 /* drink title */
 h4 {
-    font-weight: bolder;
-    font-size: 20px;
-    padding: 10px;
+  font-weight: bolder;
+  font-size: 20px;
+  padding: 10px;
 }
 
 footer {
-    background-color: tomato;
-    border: 2px double;
-    border-radius: 10px;
-    color: #eeeeee;
-    text-align: center;
-    height: 80px;
-    width: 600px;
-    margin: 0 auto;
-    margin-bottom: 10px;
+  background-color: tomato;
+  border: 2px double;
+  border-radius: 10px;
+  color: #eeeeee;
+  text-align: center;
+  height: 80px;
+  width: 600px;
+  margin: 0 auto;
+  margin-bottom: 10px;
 }
 
 
 /* joke title */
 .h5 {
-    font-weight: bolder;
-    font-size: 22px;
+  font-weight: bolder;
+  font-size: 22px;
 }
 
 
 p {
-    font-size: 18px;
-    padding-left: 15px;
-    margin-top: 10px;
-    line-height: 2;
-    text-align: left;
+  font-size: 18px;
+  padding-left: 15px;
+  margin-top: 10px;
+  line-height: 2;
+  text-align: left;
 }
 
 
 /* for popover js */
 #tooltip {
-    background-color: #333;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 4px;
-    font-size: 13px;
+  background-color: #333;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 13px;
 }
-
