--- a/style.css
+++ b/style.css
@@ -18,27 +18,30 @@ body {
 
 @-webkit-keyframes glow {
   from {
-      text-shadow: 0 0 10px #eee, 0 0 20px #fff, 0 0 30px red, 0 0 40p red, 0 0 50px red, 0 0 60p red, 0 0 70p red;
+    text-shadow: 0 0 10px #eee, 0 0 20px #fff, 0 0 30px red, 0 0 40p red, 0 0 50px red, 0 0 60p red, 0 0 70p red;
   }
 
   to {
-      text-shadow: 0 0 20px #eee, 0 0 30px tomato, 0 0 40px tomato, 0 0 50px tomato, 0 0 60px tomato, 0 0 70px tomato, 0 0 80px tomato;
+    text-shadow: 0 0 20px #eee, 0 0 30px tomato, 0 0 40px tomato, 0 0 50px tomato, 0 0 60px tomato, 0 0 70px tomato, 0 0 80px tomato;
   }
 }
 
 @media screen and (max-width: 600px) {
   #mainTitle {
     font-size: 75px !important;
-  };
+  }
 
-  #options1, #options2 {
+  ;
+
+  #options1,
+  #options2 {
     height: 200px;
   }
 }
 
 iframe {
-width: 290px;
-height: 220px;
+  width: 290px;
+  height: 220px;
 }
 
 
@@ -170,6 +173,13 @@ button {
 #user-submit {
   left: 46%;
   box-shadow: 0 0 5px 2px;
+}
+
+.popover-body {
+  font-size: 26px;
+  font-weight: bolder;
+  color: whitesmoke;
+  background-color: brown;
 }
 
 
